--- a/views/order.html
+++ b/views/order.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>登录测试</title>
+	<title>订单测试</title>
 </head>
 <body>
-	<form action="/login " method="POST">
-		<label>登录</label>
-		<div>手机号:<input type="text" name="tel"></div>
-		<div>密码:<input type="text" name="pwd"></div>
-		<input type="submit" name="获取相片"Submit/>
+	<form action="/order " method="POST">
+		<label>订单测试</label>
+		<div>types:<input type="text" name="types"></div>
+		<div>options:<input type="text" name="options"></div>
+		<div>getType:<input type="text" name="getType"></div>
+		<div>userId:<input type="text" name="userId"></div>
+		<div>pageNo:<input type="text" name="pageNo"></div>
+		<div>pageSize:<input type="text" name="pageSize"></div>
+		<input type="submit" name="获取订单"Submit/>
+	</form>	
+
+		<form action="/order " method="POST">
+		<label>订单测试</label>
+		<div>types:<input type="text" value="0" name="types"></div>
+		<div>options:<input type="text" value="1" name="options"></div>
+		<div>userId:<input type="text" name="userId"></div>
+		<div>addressId:<input type="text" name="addressId"></div>
+		<div>partnerId:<input type="text" name="partnerId"></div>
+		<input type="submit" name="获取订单"Submit/>
 	</form>	
 </body>
 </html>
