--- a/views/partner_list.html
+++ b/views/partner_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>商品列表</title>
+    <title>合作商管理</title>
     <link rel="stylesheet" type="text/css" href="../static/css/element.css">
     <style>
         .el-header, .el-footer {
@@ -51,12 +51,7 @@
             <el-header>
                 <el-row :gutter="10">
                     <el-col :span="16">
-                        <el-input placeholder="请输入内容" class="input-with-select">
-                            <el-select value="1" slot="prepend" placeholder="请选择">
-                                <el-option label="全部类型" value="1"></el-option>
-                                <el-option label="海鲜" value="2"></el-option>
-                                <el-option label="水果" value="3"></el-option>
-                            </el-select>
+                        <el-input placeholder="请输入地址或者合作商名称" class="input-with-select">                            
                             <el-button slot="append" icon="el-icon-search"></el-button>
                         </el-input>
                     </el-col>
@@ -64,7 +59,7 @@
                     <el-col :span="8" style="text-align:right">
                         <el-button @click="toggleSelection()">取消选择</el-button>
                         <el-button type="warning">移除</el-button>
-                        <el-button type="success" @click="location.href='products?page=product_add'">新增</el-button>
+                        <el-button type="success" @click="location.href='partner?page=partner_add'">新增</el-button>
                     </el-col>
                 </el-row>
                 
@@ -83,19 +78,19 @@
                                          prop="Id"
                                          width="40">
                         </el-table-column>
-                        <el-table-column prop="Name"
-                                         label="标题"
+                        <el-table-column prop="PartnerName"
+                                         label="名称"
                                          sortable
                                          width="380">
                         </el-table-column>
-                        <el-table-column prop="Price"
-                                         label="价格"
+                        <el-table-column prop="Address"
+                                         label="地址"
                                          sortable
                                          width="180">
                         </el-table-column>
-                        <el-table-column prop="Count"
+                        <el-table-column prop="Credits"
                                          sortable
-                                         label="库存">
+                                         label="积分">
                         </el-table-column>
                         <el-table-column prop="Add_time"
                                          sortable
@@ -157,9 +152,11 @@
                 handleSizeChange(val) {
                     console.log(`每页 ${val} 条`);
                     this.pageSize = val
+                    getPageData(this.currentPage, this.pageSize);
                 },
                 handleCurrentChange(val) {
                     console.log(`当前页    ${val}`);
+                    getPageData(val, this.pageSize);
                 },
                 deleteProduct(id) {
                     var result = confirm("移除后数据不可恢复")
@@ -183,25 +180,28 @@
             }
 
         });
-        initData();
+        getPageData(1,2);
         //初始化数据
-        function initData() {
+        function getPageData(pageNo, pageSize) {
+            vm.currentPage = pageNo;
+            vm.pageSize = pageSize;
+
             $.ajax({
-                url: location.origin + "/products",
+                url: location.origin + "/partner",
                 data: {
                     types: 1,
                     options: 0,
-                    productTypeId: 1,
-                    getType: 0,
-                    pageNo: 1,
-                    pageSize:2
+                   // productTypeId: 1,
+                    getType: 1,
+                    pageNo: pageNo,
+                    pageSize: pageSize
 
                 },
                 type: "post",
                 dataType: "json",
                 success: function (e) {
                     if (e.status == "200") {
-                        var list = e.products;
+                        var list = e.partners;
                         for (var i = 0; i < list.length; i++) {
                             list[i].Name = decodeURIComponent(list[i].Name)                        
                         }
