--- a/views/product_type_list.html
+++ b/views/product_type_list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>商品列表</title>
+    <title>商品分类列表</title>
     <link rel="stylesheet" type="text/css" href="../static/css/element.css">
     <style>
         .el-header, .el-footer {
-         padding-top:1em;
+            padding-top: 1em;
         }
 
         .el-aside {
@@ -17,7 +17,6 @@
         .el-main {
             background-color: #ffffff;
             color: #333;
-           
         }
 
         body > .el-container {
@@ -27,18 +26,22 @@
         .main-contaner {
             padding: 0;
         }
+
         .el-main {
-            padding:10px;
-            overflow-y:scroll
+            padding: 10px;
+            overflow-y: scroll
         }
+
         .nav-tab {
             background-color: #E9EEF3;
         }
-         .el-tabs.el-tabs--card.el-tabs--top {
+
+        .el-tabs.el-tabs--card.el-tabs--top {
             height: 100%
         }
+
         .el-tabs__content {
-        height:calc(100% - 41px)
+            height: calc(100% - 41px)
         }
     </style>
 </head>
@@ -50,26 +53,26 @@
         <el-container style="height:100vh;">
             <el-header>
                 <el-row :gutter="10">
-                    <el-col :span="16">
-                        <el-input placeholder="请输入内容" class="input-with-select">
+                    <el-col :span="16" style="height:1px">
+                        <!--<el-input placeholder="请输入内容" class="input-with-select">
                             <el-select value="1" slot="prepend" placeholder="请选择">
                                 <el-option label="全部类型" value="1"></el-option>
                                 <el-option label="海鲜" value="2"></el-option>
                                 <el-option label="水果" value="3"></el-option>
                             </el-select>
                             <el-button slot="append" icon="el-icon-search"></el-button>
-                        </el-input>
+                        </el-input>-->
                     </el-col>
-                   
+
                     <el-col :span="8" style="text-align:right">
                         <el-button @click="toggleSelection()">取消选择</el-button>
                         <el-button type="warning" @click="batchDelete()">移除</el-button>
-                        <el-button type="success" @click="location.href='products?page=product_add'">新增</el-button>
+                        <el-button type="success" @click="dialogVisible=true">新增</el-button>
                     </el-col>
                 </el-row>
-                
+
             </el-header>
-          
+
             <el-main class="main-contaner">
                 <template>
 
@@ -85,21 +88,18 @@
                                          prop="Id"
                                          width="40">
                         </el-table-column>
-                        <el-table-column prop="Name"
+                        <el-table-column prop="TypeName"
                                          label="标题"
                                          sortable
                                          width="380">
                         </el-table-column>
-                        <el-table-column prop="Price"
-                                         label="价格"
+                        <el-table-column prop="SortId"
+                                         label="排序"
                                          sortable
                                          width="180">
                         </el-table-column>
-                        <el-table-column prop="Count"
-                                         sortable
-                                         label="库存">
-                        </el-table-column>
-                        <el-table-column prop="Add_time"
+                        >
+                        <el-table-column prop="CreateTime"
                                          sortable
                                          label="时间">
                         </el-table-column>
@@ -107,7 +107,7 @@
                                          sortable
                                          label="操作">
                             <template slot-scope="scope">
-                                <el-button @click.native.prevent="location.href='products?page=product_add'"
+                                <el-button @click.native.prevent="editOne(scope.row.Id)"
                                            type="text"
                                            size="small">
                                     编辑
@@ -135,9 +135,25 @@
                     </div>
                 </template>
             </el-main>
-          
-        </el-container>
 
+        </el-container>
+        <el-dialog title="新增分类"
+                   :visible.sync="dialogVisible"
+                   width="30%"
+                  >
+            <el-form ref="form" :model="form" label-width="80px">
+                <el-form-item label="分类名称">
+                    <el-input v-model="form.TypeName"></el-input>
+                </el-form-item>
+                <el-form-item label="排序id">
+                    <el-input-number v-model="form.SortId" controls-position="right" :min="0" ></el-input-number>
+                </el-form-item>
+            </el-form>
+            <span slot="footer" class="dialog-footer">
+                <el-button @click="dialogVisible = false">取 消</el-button>
+                <el-button type="primary" @click="addOne()">确 定</el-button>
+            </span>
+        </el-dialog>
     </div>
     <script type="text/javascript" src="../static/js/vue.min.js"></script>
     <script type="text/javascript" src="../static/js/element.min.js"></script>
@@ -147,12 +163,18 @@
         var vm = new Vue({
             el: '#app',
             data: {
-                selectIds:[],
+                selectIds: [],
                 tableData: "",
                 pageSize: "3",
-                pageTotal:"0",
-                currentPage:"1",
-                loading: true
+                pageTotal: "0",
+                currentPage: "1",
+                loading: true,
+                dialogVisible: false,
+                form: {
+                    TypeName: "",
+                    SortId:""
+                }
+
             },
             methods: {
 
@@ -170,7 +192,7 @@
                     if (result) {
                         deleteData(id)
                     }
-                    
+
                 },
                 toggleSelection(rows) {
                     if (rows) {
@@ -197,17 +219,24 @@
                         for (var i = 0; i < items.length; i++) {
                             this.selectIds.push(items[i].Id)
                         }
-                       
+
                     }
 
+                },
+                addOne(item) {
+                    if (this.form.TypeName == "" || this.form.SortId == "") {
+                        alert("请填写完整参数")
+                        return
+                    }
+                    submitData()
                 }
-               
-            
+
+
 
             }
 
         });
-        getPageData(1,2);
+        getPageData(1, 2);
         //初始化数据
         function getPageData(pageNo, pageSize) {
             vm.currentPage = pageNo;
@@ -216,10 +245,10 @@
             $.ajax({
                 url: location.origin + "/products",
                 data: {
-                    types: 1,
+                    types: 0,
                     options: 0,
-                    productTypeId: 1,
-                    getType: 0,
+                    // productTypeId: 1,
+                    //getType: 0,
                     pageNo: pageNo,
                     pageSize: pageSize
 
@@ -228,9 +257,9 @@
                 dataType: "json",
                 success: function (e) {
                     if (e.status == "200") {
-                        var list = e.products;
+                        var list = e.productTypes;
                         for (var i = 0; i < list.length; i++) {
-                            list[i].Name = decodeURIComponent(list[i].Name)                        
+                            list[i].Name = decodeURIComponent(list[i].Name)
                         }
                         vm.tableData = list
                         vm.pageTotal = e.totalPage
@@ -240,7 +269,7 @@
                     }
                 },
                 complete: function (e) {
-                   // $("body").loader("hide")
+                    // $("body").loader("hide")
                 },
                 error: function (XMLHttpRequest, textStatus, errorThrown) {
                     alert("状态：" + textStatus + "；出错提示：" + errorThrown);
@@ -252,9 +281,9 @@
             $.ajax({
                 url: location.origin + "/products?page=product",
                 data: {
-                    types: 1,
+                    types: 0,
                     options: 2,
-                    productId: id
+                    productTypeId: id
                 },
                 type: "post",
                 dataType: "json",
@@ -265,7 +294,7 @@
                         getPageData(1, vm.pageSize);
                         //vm.tableData = vm.tableData.filter(item => { return item.Id != id })
                         //vm.pageTotal = vm.tableData.length
-                       // vm.pageTotal = list.length
+                        // vm.pageTotal = list.length
                     } else if (e.status == "400") {
                         alert(e.msg)
                     }
@@ -290,9 +319,36 @@
                 }
             }
             console.log(vm.tableData)
-           
+
         }
-       
+        //新增数据
+        function submitData() {
+            $.ajax({
+                url: location.origin + "/products",
+                data: {
+                    types: 0,
+                    options: 1,
+                    typeName: decodeURIComponent(vm.form.TypeName),
+                    sortId: vm.form.SortId
+                },
+                type: "post",
+                dataType: "json",
+                success: function (e) {
+
+                    if (e.status == "200") {
+                        getPageData(1, vm.pageSize);
+                    } else if (e.status == "400") {
+                        alert(e.msg)
+                    }
+                },
+                complete: function (e) {
+                    vm.dialogVisible = false
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    alert("状态：" + textStatus + "；出错提示：" + errorThrown);
+                },
+            });
+        }
     </script>
 </body>
 </html>
