--- a/views/order.html
+++ b/views/order.html
@@ -9,19 +9,9 @@
 		<div>types:<input type="text" name="types"></div>
 		<div>options:<input type="text" name="options"></div>
 		<div>getType:<input type="text" name="getType"></div>
-		<div>userId:<input type="text" name="userId"></div>
+		<div>orderId:<input type="text" name="orderId"></div>
 		<div>pageNo:<input type="text" name="pageNo"></div>
 		<div>pageSize:<input type="text" name="pageSize"></div>
-		<input type="submit" name="获取订单"Submit/>
-	</form>	
-
-		<form action="/order " method="POST">
-		<label>订单测试</label>
-		<div>types:<input type="text" value="0" name="types"></div>
-		<div>options:<input type="text" value="1" name="options"></div>
-		<div>userId:<input type="text" name="userId"></div>
-		<div>addressId:<input type="text" name="addressId"></div>
-		<div>partnerId:<input type="text" name="partnerId"></div>
 		<input type="submit" name="获取订单"Submit/>
 	</form>	
 </body>
