--- a/views/product_add.html
+++ b/views/product_add.html
@@ -131,13 +131,13 @@
                 data: {
                     types: 1,
                     options: 1,
-                    productTypeId: $("#attr_productTypeId").val(),
-                    name: encodeURIComponent($("#attr_name").val()),
-                    price: $("#attr_price").val(),                  
-                    desc: encodeURIComponent($("#attr_desc").code()),
-                    count: $("#attr_count").val(), 
-                    standardPrice: $("#attr_standardPrice").val(),
-                    msg: encodeURIComponent( $("#attr_msg").val()), 
+                    ProductTypeId: $("#attr_productTypeId").val(),
+                    Name: encodeURIComponent($("#attr_name").val()),
+                    Price: $("#attr_price").val(),                  
+                    Desc: encodeURIComponent($("#attr_desc").code()),
+                    Count: $("#attr_count").val(), 
+                    StandardPrice: $("#attr_standardPrice").val(),
+                    Msg: encodeURIComponent( $("#attr_msg").val()), 
 
                 },
                 type: "post",
