--- a/views/product_edit.html
+++ b/views/product_edit.html
@@ -212,6 +212,8 @@
             var img = new Image()
             img.src = src;
             canvas = document.createElement("canvas")
+            canvas.width = img.width
+            canvas.height = img.height
             var context = canvas.getContext("2d");
             context.drawImage(img,0,0);
             var imageData = canvas.toDataURL('image/png');
