--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
             background-color: #B3C0D1;
             color: #333;
             text-align: center;
+            float：right；
         }
 
         .el-aside {
@@ -88,7 +89,6 @@
                     <el-container style="height:100%">
 
                         <el-main>
-
 
                             <el-tabs v-model="editableTabsValue2" type="card" closable @tab-remove="removeTab">
                                 <el-tab-pane v-for="(item, index) in editableTabs2"
