--- a/views/procurement.html
+++ b/views/procurement.html
@@ -8,7 +8,6 @@
         .el-header, .el-footer {
             color: #333;
             text-align: center;
-            float: right;
         }
 
         .el-aside {
@@ -53,56 +52,30 @@
 	<div id="app">
 		<el-container>
 
-		  <el-header >
+		  <el-header  align="right">
 		  	<el-menu :default-active="activeIndex" class="el-menu-demo" mode="horizontal"@select="handleSelect" >
-			  <el-menu-item index="1">处理中心</el-menu-item>
-			  <el-submenu index="2">
-			    <template slot="title">我的工作台</template>
-			    <el-menu-item index="2-1">选项1</el-menu-item>
-			    <el-menu-item index="2-2">选项2</el-menu-item>
-			    <el-menu-item index="2-3">选项3</el-menu-item>
-			    <el-submenu index="2-4">
-			      <template slot="title">选项4</template>
-			      <el-menu-item index="2-4-1">选项1</el-menu-item>
-			      <el-menu-item index="2-4-2">选项2</el-menu-item>
-			      <el-menu-item index="2-4-3">选项3</el-menu-item>
-			    </el-submenu>
-			  </el-submenu>
-			  <el-menu-item index="3" disabled>消息中心</el-menu-item>
-			  <el-menu-item index="4"><a href="https://www.ele.me" target="_blank">订单管理</a></el-menu-item>
+			  <el-menu-item index="1">采购商品</el-menu-item>
+			  <el-menu-item index="2">采购清单</el-menu-item>
+			  <el-menu-item index="3">订单管理</el-menu-item>
 			</el-menu>
 		</el-header>
 
 		  <el-container>
 		    <el-aside width="200px">
 		    	<el-menu
-			      default-active="2"
+			      default-active="1"
 			      class="el-menu-vertical-demo"
 			      @open="handleOpen"
 			      @close="handleClose">
-			      <el-submenu index="1">
-			        <template slot="title">
-			          <i class="el-icon-location"></i>
-			          <span>导航一</span>
-			        </template>
-			        <el-menu-item-group>
-			          <template slot="title">分组一</template>
-			          <el-menu-item index="1-1">选项1</el-menu-item>
-			          <el-menu-item index="1-2">选项2</el-menu-item>
-			        </el-menu-item-group>
-			        <el-menu-item-group title="分组2">
-			          <el-menu-item index="1-3">选项3</el-menu-item>
-			        </el-menu-item-group>
-			        <el-submenu index="1-4">
-			          <template slot="title">选项4</template>
-			          <el-menu-item index="1-4-1">选项1</el-menu-item>
-			        </el-submenu>
-			      </el-submenu>
+			      <el-menu-item index="1">
+			        <i class="el-icon-location"></i>
+			        <span slot="title">导航一</span>
+			      </el-menu-item>
 			      <el-menu-item index="2">
 			        <i class="el-icon-menu"></i>
 			        <span slot="title">导航二</span>
 			      </el-menu-item>
-			      <el-menu-item index="3" disabled>
+			      <el-menu-item index="3" >
 			        <i class="el-icon-document"></i>
 			        <span slot="title">导航三</span>
 			      </el-menu-item>
@@ -113,10 +86,16 @@
 			    </el-menu>
 		    </el-aside>
 		    <el-container>
-		      <el-main>Main</el-main>
-		      <el-footer>
+		      <el-main>
+		      	<template style="height:100%">
+                         <label>this is main !!!</label>               
+                    <!-- <iframe v-bind:src="127.0.0.1:8080/products?page=product_list" style="width:100%;height:100%;border:none" ></iframe> -->
+                                     
+                </template>
+		      </el-main>
+<!-- 		      <el-footer>
 		      	底部导航栏
-		      </el-footer>
+		      </el-footer> -->
 		    </el-container>
 		  </el-container>
 		</el-container>
@@ -133,7 +112,6 @@
             	msg:0,
             	activeIndex: '1',
 			    activeIndex2: '1'
-
             },
             methods: {
 			      handleSelect(key, keyPath) {
