--- a/views/product_edit.html
+++ b/views/product_edit.html
@@ -48,6 +48,9 @@
                 <div class="col-sm-4">
                     <label>是否首页轮播</label><input style="margin:5px" type="checkbox" id="attr_is_carousel" />
                 </div>
+                <div class="col-sm-4">
+                    <label>是否热推荐</label><input style="margin:5px" type="checkbox" id="attr_is_hot" />
+                </div>
             </div>
 
 
@@ -142,6 +145,7 @@
                     Msg: encodeURIComponent( $("#attr_msg").val()), 
                     productId: window.productId,
                     IsCarousel: ($("#attr_is_carousel").is(":checked")) ? 1 : 0,
+                    IsHot: ($("#attr_is_hot").is(":checked")) ? 1 : 0,
                     SortId: $("#attr_sort_id").val()
                 },
                 type: "post",
@@ -212,8 +216,8 @@
             var img = new Image()
             img.src = src;
             canvas = document.createElement("canvas")
-            canvas.width = img.width
-            canvas.height = img.height
+            canvas.width = img.width;
+            canvas.height = img.height;
             var context = canvas.getContext("2d");
             context.drawImage(img,0,0);
             var imageData = canvas.toDataURL('image/png');
